# mvn-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/mvn-cli/: Cargo.toml
crates/mvn-cli/src/: main.rs
crates/mvn-core/: Cargo.toml
crates/mvn-core/src/: coord.rs  downloader.rs  error.rs  lib.rs  metadata.rs  pom.rs  repository.rs  resolver.rs  settings.rs  uploader.rs  version.rs
